WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309158
[GTK][WPE] Compositor animations should not trigger compositions on invisible elements
https://bugs.webkit.org/show_bug.cgi?id=309158
Summary
[GTK][WPE] Compositor animations should not trigger compositions on invisible...
Miguel Gomez
Reported
2026-03-04 05:35:51 PST
TextureMapperLayer::syncAnimations() returns a boolean indicating whether the layer has some animation applied and we need to request compositions to render the animation. But if the layer has opacity 0, we don't really need to request a composition because the animated element is invisible. The only exception to this is if there's an ongoing opacity animation.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2026-03-04 06:06:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59887
EWS
Comment 2
2026-03-04 07:18:05 PST
Committed
308629@main
(a1f07bf02552): <
https://commits.webkit.org/308629@main
> Reviewed commits have been landed. Closing PR #59887 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug