[GTK][WPE] Compositor animations should not trigger compositions on invisible elements https://bugs.webkit.org/show_bug.cgi?id=309158

Reviewed by Carlos Garcia Campos.

Don't trigger compositions due to animations on invisible elements.

* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::syncAnimations):

Canonical link: https://commits.webkit.org/308629@main